style: change styling on wrapper to prevent horizontal scrolling

--- a/frontend/src/pages/TicketsPage/ticketPage.scss
+++ b/frontend/src/pages/TicketsPage/ticketPage.scss
@@ -1,11 +1,7 @@
 @use '../../scss/abstracts' as *;
 
 #wrapper {
-	padding-bottom: rem(16);
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	@include breakpoint-min(md) {
-		padding-bottom: 0px;
-	}
 }
